# aoc2022

day1/: day1.cabal
day1/app/: Main.hs
day10/: day10.cabal
day10/app/: Main.hs
day11/: day11.cabal
day11/app/: Main.hs
day12/: day12.cabal
day12/app/: Main.hs
day13/: day13.cabal
day13/app/: Main.hs
day14/: day14.cabal
day14/app/: Main.hs
day15/: day15.cabal
day15/app/: Main.hs
day16/: day16.cabal
day16/app/: Main.hs
day17/: day17.cabal
day17/app/: Main.hs
day18/: day18.cabal
day18/app/: Main.hs
day19/: day19.cabal
day19/app/: Main.hs
day2/: day2.cabal
day2/app/: Main.hs
day20/: day20.cabal
day20/app/: Main.hs
day21/: day21.cabal
day21/app/: Main.hs
day22/: day22.cabal
day22/app/: Main.hs
day23/: day23.cabal
day23/app/: Main.hs
day24/: day24.cabal
day24/app/: Main.hs
day25/: day25.cabal
day25/app/: Main.hs
day3/: day3.cabal
day3/app/: Main.hs
day4/: day4.cabal
day4/app/: Main.hs
day5/: day5.cabal
day5/app/: Main.hs
day6/: day6.cabal
day6/app/: Main.hs
day7/: day7.cabal
day7/app/: Main.hs
day8/: day8.cabal
day8/app/: Main.hs
day9/: day9.cabal
day9/app/: Main.hs
